--- a/views/register.html
+++ b/views/register.html
@@ -10,7 +10,7 @@
     <title>Bienvenidos a Mercadoliebre</title>
 
     <!-- BOOTSTRAP -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
 
 
 <!-- GOOGLE FONTS -->
@@ -51,9 +51,9 @@
                 <li type="none"> <a href="*">Ayuda</a> </li>
             </ul>
             <ul class="nav-user">
-                <li type="none"> <a href="/register">Creá tu cuenta</a> </li>
-                <li type="none"> <a href="/login">Ingresá</a> </li>
-                <li type="none"> <a href="*">Mis compras</a> </li>
+                <li type="none"> <a href="/register">Creá tu cuenta</a><i class="far fa-id-card"></i></li>
+                <li type="none"> <a href="/login">Ingresá</a><i class="fas fa-sign-in-alt"></i></li>
+                <li type="none"> <a href="*">Mis compras</a><i class="fas fa-shopping-basket"></i></li>
             </ul>
         </nav>
 
