--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -63,6 +63,11 @@ input {
     display: none;
 }
 
+a{
+    text-decoration: none;
+    color: black;
+}
+
 
 .burger-menu {
     text-align: center;
@@ -354,11 +359,11 @@ input:focus::placeholder {
 
     .top-header p{
         width: 35%;
-        padding-right: 10px;
+        padding-right: 2px;
         display: flex;
         align-items: center;
         justify-content: center;
-        font-size: 10px;
+        font-size: 12px;
         }
 
     .title-item{
@@ -375,16 +380,18 @@ input:focus::placeholder {
 
     .nav-shop{
         display: flex;
-        width: 40%;
+        width: 45%;
         flex-direction: row;
         justify-content: space-around;
+        font-size: 13px;
     }
 
     .nav-user{
         display: flex;
-        width: 40%;
+        width: 45%;
         flex-direction: row;
         justify-content: space-around;
+        font-size: 13px;
 
     }
 
@@ -431,12 +438,12 @@ input:focus::placeholder {
         width: 30%;
         }
     .top-header .search{
-        width: 40%;
+        width: 35%;
         }
 
     .top-header p{
-        width: 30%;
-        font-size: 16px;
+        width: 35%;
+        font-size: 18px;
         }
 
         .nav-bar{
@@ -445,10 +452,12 @@ input:focus::placeholder {
 
     
         .nav-shop{
-            width: 30%;
+            width: 35%;
+            font-size: 18px;
         }
         .nav-user{
-            width: 25%;
+            width: 40%;
+            font-size: 18px;
         }
 
 
@@ -484,7 +493,7 @@ input:focus::placeholder {
     transition: all 500ms;
     }
 
-    .tarjeta-efectivo:hover i{
+    .tarjeta-efectivo i:hover{
         color: #39b54a;        
     }
 
@@ -492,7 +501,7 @@ input:focus::placeholder {
         transition: all 500ms;
     }
     
-    .envio-gratis:hover i{
+    .envio-gratis i:hover{
         color: #39b54a;        
     }
 
@@ -500,7 +509,7 @@ input:focus::placeholder {
         transition: all 500ms;
     }
         
-    .seguridad:hover i{
+    .seguridad i:hover{
         color: #39b54a;        
     } 
 
